--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Ejemplo de sincronización",
   "main": "server/server.js",
+  "homepage": "https://sergiohvazquezb.github.io/pruebaSync/public/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
